--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-uglify": "^0.7.0",
-    "grunt-jslint": "^1.1.12"
+    "grunt-jslint": "^1.1.12",
+    "karma": "^0.12.31",
+    "karma-coffee-preprocessor": "^0.2.1",
+    "karma-osx-reporter": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.1.4"
   }
 }
