--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
+    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-jslint": "^1.1.12",
     "karma": "^0.12.31",
